Fix dark mode hover heights

--- a/src/modules/native-dark-mode/styles/header.css
+++ b/src/modules/native-dark-mode/styles/header.css
@@ -9,6 +9,10 @@
   text-shadow: none;
 }
 
+.mh-dark .mousehuntHud-menu ul li ul li a {
+  height: 31px;
+}
+
 .mh-dark .mousehuntHud-menu.default,
 .mh-dark .huntersHornView .huntersHornView__timer {
   filter: brightness(0.9);
